# Novel-Outline-Tool

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
resources/: app.manifest  novel-outline-tool.rc
src/: main.rs  update.rs
src/domain/: mod.rs
src/storage/: mod.rs
